--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div>logo</div>
+        <div class="nav-item-container">
+            <div class="nav-item">Home</div>
+            <div class="nav-item">Download</div>
+            <div class="nav-item">about</div>
+            <div class="nav-item">setting</div>
 </body>
 </html>
