--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>who is the car</title>
+    <title>About me</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -36,7 +36,7 @@
     <footer>
         <div class="footer-container">
             <p>Contact</p>
-            <a>Email: 67070160@kmitl.ac.th </a>
+            <a href=”https://www.instagram.com/_choopqaw” >Instagram</a>
         </div>
     </footer>
 </body>
