--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#setting">setting</a></li>
-                <button class="cta-button">Hello!!!</button>
+                <a href="Lab14.html">
+                    <button class="Lab14-button">Lab14!!!</button>
+                </a>
             </ul>
         </nav>
     </header>
@@ -36,7 +38,7 @@
     <footer>
         <div class="footer-container">
             <p>Contact</p>
-            <a href=”https://www.instagram.com/_choopqaw” >Instagram</a>
+            <a href="https://www.instagram.com/_choopqaw" >Instagram</a>
         </div>
     </footer>
 </body>
