--- a/Lab14.html
+++ b/Lab14.html
@@ -12,7 +12,7 @@
         <div id="name" class="topName">
             <a  href="https://www.instagram.com/_choopqaw"
                 target="_blank" title="Go to Instagram">
-                What ur name ?, さん
+                Waritsara , 67070160
             </a>
         </div>
 
